# fast_user

./: .env.dev  .env.prod  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
api/definitions/: user.py
api/libs/app/: app.py  base.py
api/libs/server/: server.py
api/model/: user.py
api/models/: user.py
api/resource/: resource.py  user.py
api/resources/: user.py
api/route/: route.py  user.py
api/routes/: user.py
api/schema/: user.py
api/schemas/: user.py
api/server/: server.py
cli_commands/commands/: filled_data.py  setup.py
cli_commands/libs/filled_store/: filled_store_user.py
clients/: base.py  interface.py  mongo.py
config/: api_config.py  log_config.py
core/: app.py  base.py  server.py
filled_store/: base.py  filled_store_user.py
libs/app/: app.py  base.py  interface.py
libs/clients/: mongo.py
libs/db/: client.py
libs/decorator/: di.py
libs/filled_store/: base.py  filled_store_user.py  interface.py
libs/filled_stores/: filled_store_user.py
libs/loggers/: logger_app.py
libs/routes/: user.py
libs/scripts/scripts_set_app/: init_mongodb.js
libs/store/: base.py  interface.py  mongo.py  user.py
routes/: user.py
scripts/scripts_set_app/: setup_app.sh  setup_fast_user_app.sh
scripts/scripts_set_db/: init-mongo.js  set_db.sh
scripts_js/: init_mongodb.js
server/: server.py
store/: base.py  user.py
